# gooroom-autostart-program

./: Makefile.am  configure.ac.in
data/: Makefile.am  gooroom-autostart-program.desktop.in.in  kr.gooroom.autostart.program.policy.in.in
debian/: changelog  control  copyright  rules
po/: POTFILES.in  POTFILES.skip  ko.po
src/: Makefile.am  dockitem_file_template.h  grac-reloader.py  kr.gooroom.autostart.program.policy.in  main.c
